Remove historical currency JSON files in `api/history` folder.
